# nodejs-webapp

./: .env.example  .eslintrc.js  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.prod.yml  compose.yml  docker-entrypoint.sh  ecosystem.config.js  jest.config.js  justfile  mypy.ini  package-lock.json  package.json  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
config/: app.js  database.js
prisma/: schema.prisma  seed.js
prisma/migrations/20250831160301_init/: migration.sql
src/: app.js  server.js
src/middleware/: errorHandler.js  logging.js
src/python_example/: app.py  models.py
src/routes/: api.js  index.js
src/utils/: database.js
tests/: app.test.js  setup.js  test_main.py
tests/routes/: api.test.js  index.test.js
